# fridge_statistics

./: Cargo.toml
db/: schema.sql
src/: main.rs
src/records/: mod.rs  temps.rs
src/routes/: mod.rs  temps.rs
