[package]
name = "fridge_statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
tide = "0.16.0"
sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
serde = "1.0.144"
serde_urlencoded = "0.7.1"
async-sqlx-session = { version = "0.2.1", features = ["sqlite"] }
serde_json = "1.0.85"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"